create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1789,6 +1789,10 @@ body {
 .cid-qwiFj6Io9F .mbr-section-title {
   text-align: left;
 }
+.cid-qwiFj6Io9F .mbr-text,
+.cid-qwiFj6Io9F .mbr-section-btn {
+  text-align: left;
+}
 .cid-qwj9hGIDFf {
   padding-top: 45px;
   padding-bottom: 30px;
@@ -5652,7 +5656,7 @@ body {
 .cid-qHPqBnrGRC {
   padding-top: 60px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/jumbotron5.jpg");
+  background-image: url("../../../assets/images/jumbotron3.jpg");
 }
 .cid-qHPqTwTpwE {
   padding-top: 30px;
@@ -6159,7 +6163,7 @@ body {
 .cid-qJ6Cs8aj11 {
   padding-top: 60px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/jumbotron5.jpg");
+  background-image: url("../../../assets/images/jumbotron3.jpg");
 }
 .cid-qJ6Cs9gStP {
   padding-top: 30px;
