create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1774,7 +1774,7 @@ body {
   word-break: break-word;
 }
 .cid-qwiFj6Io9F {
-  background-image: url("../../../assets/images/mbr-740x1080.jpg");
+  background-image: url("../../../assets/images/airplane-in-the-sky-1920x1280.jpg");
 }
 @media (min-width: 992px) {
   .cid-qwiFj6Io9F .mbr-figure {
@@ -1839,6 +1839,50 @@ body {
 }
 .cid-qwj9qJN3QO .mbr-text I {
   color: #ff3366;
+}
+.cid-qPkiz1lgIG {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/background3.jpg");
+}
+.cid-qPkiz1lgIG .testimonials-container {
+  margin: 0 auto;
+}
+.cid-qPkiz1lgIG .testimonials-container .testimonials-item {
+  justify-content: center;
+  margin-top: 3rem;
+}
+.cid-qPkiz1lgIG .testimonials-container .testimonials-item .user {
+  background: #ffffff;
+}
+.cid-qPkiz1lgIG .testimonials-container .testimonials-item .user.row {
+  margin: 0;
+}
+.cid-qPkiz1lgIG .testimonials-container .testimonials-item .user .user_image {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  margin: 2rem auto 2rem auto;
+}
+.cid-qPkiz1lgIG .testimonials-container .testimonials-item .user .user_image img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-qPkiz1lgIG .testimonials-container .testimonials-item .user .testimonials-caption {
+  padding: 2rem;
+  padding: 2rem 2rem 2rem 0;
+}
+@media (max-width: 260px) {
+  .cid-qPkiz1lgIG .user_image {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+@media (max-width: 767px) {
+  .cid-qPkiz1lgIG .testimonials-caption {
+    padding: 0 2rem 2rem 2rem !important;
+  }
 }
 .cid-qvT4wVVj3r {
   padding-top: 90px;
@@ -1972,7 +2016,7 @@ body {
 .cid-qw1PlGtSUM {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("../../../assets/images/mbr-1620x1080.jpg");
+  background-image: url("../../../assets/images/mbr-1673x1080.jpg");
 }
 .cid-qw1PlGtSUM .testimonials-container {
   margin: 0 auto;
@@ -5225,7 +5269,7 @@ body {
 .cid-qHPqBnrGRC {
   padding-top: 60px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/jumbotron2.jpg");
+  background-image: url("../../../assets/images/jumbotron10.jpg");
 }
 .cid-qHPqTwTpwE {
   padding-top: 30px;
@@ -5732,7 +5776,7 @@ body {
 .cid-qJ6Cs8aj11 {
   padding-top: 60px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/jumbotron2.jpg");
+  background-image: url("../../../assets/images/jumbotron10.jpg");
 }
 .cid-qJ6Cs9gStP {
   padding-top: 30px;
