--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -129,24 +129,24 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #ff3366 !important;
+  background-color: #115488 !important;
 }
 .bg-success {
-  background-color: #f7ed4a !important;
+  background-color: #ff3366 !important;
 }
 .bg-info {
-  background-color: #17dfe9 !important;
+  background-color: #3dd9d6 !important;
 }
 .bg-warning {
-  background-color: #558c94 !important;
+  background-color: #ecf9fc !important;
 }
 .bg-danger {
-  background-color: #b1a374 !important;
+  background-color: #2a93d6 !important;
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #ff3366 !important;
-  border-color: #ff3366 !important;
+  background-color: #115488 !important;
+  border-color: #115488 !important;
   color: #ffffff !important;
 }
 .btn-primary:hover,
@@ -154,39 +154,39 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff !important;
-  background-color: #e50039 !important;
-  border-color: #e50039 !important;
+  background-color: #082a44 !important;
+  border-color: #082a44 !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #e50039 !important;
-  border-color: #e50039 !important;
+  background-color: #082a44 !important;
+  border-color: #082a44 !important;
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #ef7212 !important;
-  border-color: #ef7212 !important;
-  color: #ffffff !important;
+  background-color: #ecf9fc !important;
+  border-color: #ecf9fc !important;
+  color: #20a9c9 !important;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
 .btn-secondary.focus,
 .btn-secondary.active {
-  color: #ffffff !important;
-  background-color: #a9500b !important;
-  border-color: #a9500b !important;
+  color: #20a9c9 !important;
+  background-color: #aae4f2 !important;
+  border-color: #aae4f2 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
-  color: #ffffff !important;
-  background-color: #a9500b !important;
-  border-color: #a9500b !important;
+  color: #20a9c9 !important;
+  background-color: #aae4f2 !important;
+  border-color: #aae4f2 !important;
 }
 .btn-info,
 .btn-info:active {
-  background-color: #17dfe9 !important;
-  border-color: #17dfe9 !important;
+  background-color: #3dd9d6 !important;
+  border-color: #3dd9d6 !important;
   color: #ffffff !important;
 }
 .btn-info:hover,
@@ -194,59 +194,59 @@ body {
 .btn-info.focus,
 .btn-info.active {
   color: #ffffff !important;
-  background-color: #109da4 !important;
-  border-color: #109da4 !important;
+  background-color: #21a8a6 !important;
+  border-color: #21a8a6 !important;
 }
 .btn-info.disabled,
 .btn-info:disabled {
   color: #ffffff !important;
-  background-color: #109da4 !important;
-  border-color: #109da4 !important;
+  background-color: #21a8a6 !important;
+  border-color: #21a8a6 !important;
 }
 .btn-success,
 .btn-success:active {
-  background-color: #f7ed4a !important;
-  border-color: #f7ed4a !important;
-  color: #3f3c03 !important;
+  background-color: #ff3366 !important;
+  border-color: #ff3366 !important;
+  color: #ffffff !important;
 }
 .btn-success:hover,
 .btn-success:focus,
 .btn-success.focus,
 .btn-success.active {
-  color: #3f3c03 !important;
-  background-color: #eadd0a !important;
-  border-color: #eadd0a !important;
+  color: #ffffff !important;
+  background-color: #e50039 !important;
+  border-color: #e50039 !important;
 }
 .btn-success.disabled,
 .btn-success:disabled {
-  color: #3f3c03 !important;
-  background-color: #eadd0a !important;
-  border-color: #eadd0a !important;
+  color: #ffffff !important;
+  background-color: #e50039 !important;
+  border-color: #e50039 !important;
 }
 .btn-warning,
 .btn-warning:active {
-  background-color: #558c94 !important;
-  border-color: #558c94 !important;
-  color: #ffffff !important;
+  background-color: #ecf9fc !important;
+  border-color: #ecf9fc !important;
+  color: #20a9c9 !important;
 }
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning.focus,
 .btn-warning.active {
-  color: #ffffff !important;
-  background-color: #395e63 !important;
-  border-color: #395e63 !important;
+  color: #20a9c9 !important;
+  background-color: #aae4f2 !important;
+  border-color: #aae4f2 !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
-  color: #ffffff !important;
-  background-color: #395e63 !important;
-  border-color: #395e63 !important;
+  color: #20a9c9 !important;
+  background-color: #aae4f2 !important;
+  border-color: #aae4f2 !important;
 }
 .btn-danger,
 .btn-danger:active {
-  background-color: #b1a374 !important;
-  border-color: #b1a374 !important;
+  background-color: #2a93d6 !important;
+  border-color: #2a93d6 !important;
   color: #ffffff !important;
 }
 .btn-danger:hover,
@@ -254,14 +254,14 @@ body {
 .btn-danger.focus,
 .btn-danger.active {
   color: #ffffff !important;
-  background-color: #8b7d4e !important;
-  border-color: #8b7d4e !important;
+  background-color: #1d6797 !important;
+  border-color: #1d6797 !important;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #ffffff !important;
-  background-color: #8b7d4e !important;
-  border-color: #8b7d4e !important;
+  background-color: #1d6797 !important;
+  border-color: #1d6797 !important;
 }
 .btn-white {
   color: #333333 !important;
@@ -309,122 +309,122 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #cc0033;
-  color: #cc0033;
+  border-color: #061c2d;
+  color: #061c2d;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #ff3366;
-  border-color: #ff3366;
+  background-color: #115488;
+  border-color: #115488;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #ff3366 !important;
-  border-color: #ff3366 !important;
+  background-color: #115488 !important;
+  border-color: #115488 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
   background: none;
-  border-color: #91450a;
-  color: #91450a;
+  border-color: #94ddee;
+  color: #94ddee;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
-  color: #ffffff;
-  background-color: #ef7212;
-  border-color: #ef7212;
+  color: #20a9c9;
+  background-color: #ecf9fc;
+  border-color: #ecf9fc;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
-  color: #ffffff !important;
-  background-color: #ef7212 !important;
-  border-color: #ef7212 !important;
+  color: #20a9c9 !important;
+  background-color: #ecf9fc !important;
+  border-color: #ecf9fc !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
   background: none;
-  border-color: #0d878d;
-  color: #0d878d;
+  border-color: #1d9391;
+  color: #1d9391;
 }
 .btn-info-outline:hover,
 .btn-info-outline:focus,
 .btn-info-outline.focus,
 .btn-info-outline.active {
   color: #ffffff;
-  background-color: #17dfe9;
-  border-color: #17dfe9;
+  background-color: #3dd9d6;
+  border-color: #3dd9d6;
 }
 .btn-info-outline.disabled,
 .btn-info-outline:disabled {
   color: #ffffff !important;
-  background-color: #17dfe9 !important;
-  border-color: #17dfe9 !important;
+  background-color: #3dd9d6 !important;
+  border-color: #3dd9d6 !important;
 }
 .btn-success-outline,
 .btn-success-outline:active {
   background: none;
-  border-color: #d2c609;
-  color: #d2c609;
+  border-color: #cc0033;
+  color: #cc0033;
 }
 .btn-success-outline:hover,
 .btn-success-outline:focus,
 .btn-success-outline.focus,
 .btn-success-outline.active {
-  color: #3f3c03;
-  background-color: #f7ed4a;
-  border-color: #f7ed4a;
+  color: #ffffff;
+  background-color: #ff3366;
+  border-color: #ff3366;
 }
 .btn-success-outline.disabled,
 .btn-success-outline:disabled {
-  color: #3f3c03 !important;
-  background-color: #f7ed4a !important;
-  border-color: #f7ed4a !important;
+  color: #ffffff !important;
+  background-color: #ff3366 !important;
+  border-color: #ff3366 !important;
 }
 .btn-warning-outline,
 .btn-warning-outline:active {
   background: none;
-  border-color: #304f53;
-  color: #304f53;
+  border-color: #94ddee;
+  color: #94ddee;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
 .btn-warning-outline.focus,
 .btn-warning-outline.active {
-  color: #ffffff;
-  background-color: #558c94;
-  border-color: #558c94;
+  color: #20a9c9;
+  background-color: #ecf9fc;
+  border-color: #ecf9fc;
 }
 .btn-warning-outline.disabled,
 .btn-warning-outline:disabled {
-  color: #ffffff !important;
-  background-color: #558c94 !important;
-  border-color: #558c94 !important;
+  color: #20a9c9 !important;
+  background-color: #ecf9fc !important;
+  border-color: #ecf9fc !important;
 }
 .btn-danger-outline,
 .btn-danger-outline:active {
   background: none;
-  border-color: #7a6e45;
-  color: #7a6e45;
+  border-color: #195981;
+  color: #195981;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
 .btn-danger-outline.focus,
 .btn-danger-outline.active {
   color: #ffffff;
-  background-color: #b1a374;
-  border-color: #b1a374;
+  background-color: #2a93d6;
+  border-color: #2a93d6;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
   color: #ffffff !important;
-  background-color: #b1a374 !important;
-  border-color: #b1a374 !important;
+  background-color: #2a93d6 !important;
+  border-color: #2a93d6 !important;
 }
 .btn-black-outline,
 .btn-black-outline:active {
@@ -461,22 +461,22 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #ff3366 !important;
+  color: #115488 !important;
 }
 .text-secondary {
-  color: #ef7212 !important;
+  color: #ecf9fc !important;
 }
 .text-success {
-  color: #f7ed4a !important;
+  color: #ff3366 !important;
 }
 .text-info {
-  color: #17dfe9 !important;
+  color: #3dd9d6 !important;
 }
 .text-warning {
-  color: #558c94 !important;
+  color: #ecf9fc !important;
 }
 .text-danger {
-  color: #b1a374 !important;
+  color: #2a93d6 !important;
 }
 .text-white {
   color: #ffffff !important;
@@ -486,27 +486,27 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #cc0033 !important;
+  color: #061c2d !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
-  color: #91450a !important;
+  color: #94ddee !important;
 }
 a.text-success:hover,
 a.text-success:focus {
-  color: #d2c609 !important;
+  color: #cc0033 !important;
 }
 a.text-info:hover,
 a.text-info:focus {
-  color: #0d878d !important;
+  color: #1d9391 !important;
 }
 a.text-warning:hover,
 a.text-warning:focus {
-  color: #304f53 !important;
+  color: #94ddee !important;
 }
 a.text-danger:hover,
 a.text-danger:focus {
-  color: #7a6e45 !important;
+  color: #195981 !important;
 }
 a.text-white:hover,
 a.text-white:focus {
@@ -520,13 +520,13 @@ a.text-black:focus {
   background-color: #70c770;
 }
 .alert-info {
-  background-color: #17dfe9;
+  background-color: #3dd9d6;
 }
 .alert-warning {
-  background-color: #558c94;
+  background-color: #ecf9fc;
 }
 .alert-danger {
-  background-color: #b1a374;
+  background-color: #2a93d6;
 }
 .mbr-section-btn a.btn:not(.btn-form) {
   border-radius: 100px;
@@ -544,8 +544,8 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #ff3366;
-  border-color: #ff3366;
+  background-color: #115488;
+  border-color: #115488;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -562,11 +562,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #ff3366;
+  color: #115488;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #3397e6;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -574,15 +574,15 @@ a:hover {
 }
 .mbr-plan-header.bg-info .mbr-plan-subtitle,
 .mbr-plan-header.bg-info .mbr-plan-price-desc {
-  color: #d1f9fb;
+  color: #e8fafa;
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
-  color: #a0c3c8;
+  color: #ffffff;
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
-  color: #dfd9c6;
+  color: #d5eaf7;
 }
 /* Scroll to top button*/
 #scrollToTop a {
@@ -684,7 +684,7 @@ blockquote {
   padding: 10px 0 10px 20px;
   font-size: 1.09rem;
   position: relative;
-  border-color: #ff3366;
+  border-color: #115488;
   border-width: 3px;
 }
 ul,
@@ -772,7 +772,7 @@ pre {
   text-align: center;
   position: relative;
   border: 2px solid #c0a375;
-  border-color: #ff3366;
+  border-color: #115488;
   color: #232323;
   cursor: pointer;
 }
@@ -783,7 +783,7 @@ pre {
 }
 .btn-social:hover {
   color: #fff;
-  background: #ff3366;
+  background: #115488;
 }
 .btn-social + .btn {
   margin-left: .1rem;
@@ -791,11 +791,11 @@ pre {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #ff3366;
+  background: #115488;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #ff3366;
+  color: #115488;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
@@ -1740,6 +1740,9 @@ body {
     flex-shrink: 0;
   }
 }
+.cid-qvSK4HTIRN {
+  background-image: url("../../../assets/images/mbr-1617x1080.jpg");
+}
 @media (min-width: 992px) {
   .cid-qvSK4HTIRN .mbr-figure {
     padding-left: 4rem;
@@ -1760,7 +1763,7 @@ body {
 .cid-qGhyaYT6iN {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #7f1933;
+  background-color: #115488;
 }
 .cid-qGhyaYT6iN .testimonial-text {
   font-style: italic;
@@ -1968,12 +1971,12 @@ body {
 .cid-qNxqy3STpS {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/mbr-2-1620x1080.jpg");
+  background-image: url("../../../assets/images/mbr-1-1080x1080.jpg");
 }
 .cid-qvTbBSp4os {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #efefef;
+  background-color: #ecf9fc;
 }
 .cid-qvTbBSp4os .mbr-slider .carousel-control {
   background: #1b1b1b;
@@ -5269,7 +5272,7 @@ body {
 .cid-qHPqBnrGRC {
   padding-top: 60px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/jumbotron10.jpg");
+  background-image: url("../../../assets/images/jumbotron3.jpg");
 }
 .cid-qHPqTwTpwE {
   padding-top: 30px;
@@ -5776,7 +5779,7 @@ body {
 .cid-qJ6Cs8aj11 {
   padding-top: 60px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/jumbotron10.jpg");
+  background-image: url("../../../assets/images/jumbotron3.jpg");
 }
 .cid-qJ6Cs9gStP {
   padding-top: 30px;
