--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5275,7 +5275,7 @@ body {
 .cid-qHPqBnrGRC {
   padding-top: 60px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/jumbotron0.jpg");
+  background-image: url("../../../assets/images/jumbotron3.jpg");
 }
 .cid-qHPqTwTpwE {
   padding-top: 30px;
@@ -5782,7 +5782,7 @@ body {
 .cid-qJ6Cs8aj11 {
   padding-top: 60px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/jumbotron0.jpg");
+  background-image: url("../../../assets/images/jumbotron3.jpg");
 }
 .cid-qJ6Cs9gStP {
   padding-top: 30px;
@@ -8734,5 +8734,436 @@ body {
   }
 }
 .cid-qw1Q7680qB .media-container-row .row-copirayt {
+  word-break: break-word;
+}
+.cid-qQr8jYDDxY .navbar {
+  padding: .5rem 0;
+  background: #19277f;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qQr8jYDDxY .navbar-dropdown.bg-color.transparent.opened {
+  background: #19277f;
+}
+.cid-qQr8jYDDxY a {
+  font-style: normal;
+}
+.cid-qQr8jYDDxY .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  top: -0.2em;
+  text-decoration: none;
+}
+.cid-qQr8jYDDxY .nav-item a {
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qQr8jYDDxY .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qQr8jYDDxY .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qQr8jYDDxY .menu-logo {
+  margin-right: auto;
+}
+.cid-qQr8jYDDxY .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qQr8jYDDxY .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qQr8jYDDxY .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qQr8jYDDxY .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qQr8jYDDxY .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qQr8jYDDxY .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qQr8jYDDxY .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qQr8jYDDxY .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qQr8jYDDxY .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qQr8jYDDxY .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qQr8jYDDxY .dropdown .dropdown-menu {
+  background: #19277f;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qQr8jYDDxY .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qQr8jYDDxY .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qQr8jYDDxY .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qQr8jYDDxY .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qQr8jYDDxY .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qQr8jYDDxY .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qQr8jYDDxY .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qQr8jYDDxY .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qQr8jYDDxY .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qQr8jYDDxY .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qQr8jYDDxY .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qQr8jYDDxY button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qQr8jYDDxY button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qQr8jYDDxY button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-qQr8jYDDxY button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qQr8jYDDxY button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qQr8jYDDxY button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qQr8jYDDxY button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qQr8jYDDxY nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qQr8jYDDxY nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qQr8jYDDxY nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qQr8jYDDxY nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qQr8jYDDxY .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qQr8jYDDxY .collapsed .btn {
+  display: flex;
+}
+.cid-qQr8jYDDxY .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qQr8jYDDxY .collapsed .navbar-collapse.collapsing,
+.cid-qQr8jYDDxY .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qQr8jYDDxY .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qQr8jYDDxY .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qQr8jYDDxY .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qQr8jYDDxY .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qQr8jYDDxY .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qQr8jYDDxY .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qQr8jYDDxY .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qQr8jYDDxY .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qQr8jYDDxY .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qQr8jYDDxY .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qQr8jYDDxY .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qQr8jYDDxY .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qQr8jYDDxY .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qQr8jYDDxY .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qQr8jYDDxY .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qQr8jYDDxY .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qQr8jYDDxY img {
+    height: 3.8rem !important;
+  }
+  .cid-qQr8jYDDxY .btn {
+    display: flex;
+  }
+  .cid-qQr8jYDDxY button.navbar-toggler {
+    display: block;
+  }
+  .cid-qQr8jYDDxY .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qQr8jYDDxY .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qQr8jYDDxY .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qQr8jYDDxY .navbar-collapse.collapsing,
+  .cid-qQr8jYDDxY .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qQr8jYDDxY .navbar-collapse.collapsing .navbar-nav,
+  .cid-qQr8jYDDxY .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qQr8jYDDxY .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qQr8jYDDxY .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qQr8jYDDxY .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qQr8jYDDxY .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qQr8jYDDxY .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qQr8jYDDxY .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qQr8jYDDxY .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qQr8jYDDxY .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qQr8jYDDxY .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qQr8jYDDxY .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qQr8jYDDxY .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qQr8jZRdIV {
+  padding-top: 90px;
+  padding-bottom: 30px;
+  background-image: url("../../../assets/images/mbr-1288x1080.jpg");
+}
+.cid-qQr8k1tAOJ {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #19277f;
+}
+.cid-qQr8k1tAOJ .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-qQr8k1tAOJ .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-qQr8k1tAOJ .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-qQr8k1tAOJ .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-qQr8k1tAOJ .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-qQr8k1tAOJ .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-qQr8k1tAOJ .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qQr8k1tAOJ .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qQr8k1tAOJ .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qQr8k1tAOJ .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-qQr8k1tAOJ .media-container-row .row-copirayt {
   word-break: break-word;
 }
